## Makefile.am for DirectFB/src/dfbdump

INCLUDES = \
	-I$(top_builddir)/lib		\
	-I$(top_builddir)/include	\
	-I$(top_srcdir)/include		\
	-I$(top_srcdir)/lib		\
	-I$(top_srcdir)/src


internalincludedir = $(INTERNALINCLUDEDIR)/dfbdump

internalinclude_HEADERS = \
	dfbdump.h


noinst_LTLIBRARIES = libdirectfb_dfbdump.la

libdirectfb_dfbdump_la_SOURCES =	\
	dfbdump.c

