
SUBDIRS = X11 
INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/runtime \
	-I$(top_srcdir)/plugins/DOM \
	-I$(top_srcdir)/plugins/Window 

libgpwindowdomdir = /plugins 

libgpwindowdom_LTLIBRARIES = libgpwindowdom.la

libgpwindowdom_la_LDFLAGS = \
	-avoid-version	\
	-module

libgpwindowdom_la_SOURCES = \
	gpwindowdom.c 


